@@ -2,6 +2,9 @@
 
 	* cmdenv-status-frequency is now interpreted in seconds
 
+	* enhancement: express mode: when simulation stops (on Ctrl+C, 
+	exception, normally, etc), Cmdenv prints a final status update
+
 2008-11-26  Andras Varga
 
 	* library renamed to oppcmdenv
